chore: props xroad.proxy-ui-api.acme-renewal-interval xroad.proxy-ui-api.acme-renewal-retry-delay xroad.proxy-ui-api.acme-renewal-time-before-expiration-date xroad.proxy-ui-api.acme-keypair-renewal-time-before-expiration-date xroad.proxy-ui-api.automatic-activate-acme-sign-certificate xroad.proxy-ui-api.acme-renewal-active xroad.proxy-ui-api.acme-authorization-wait-attempts xroad.proxy-ui-api.acme-authorization-wait-interval xroad.proxy-ui-api.acme-certificate-wait-attempts xroad.proxy-ui-api.acme-certificate-wait-interval xroad.proxy-ui-api.acme-certificate-account-key-pair-expiration xroad.proxy-ui-api.acme-challenge-port-enabled xroad.proxy-ui-api.acme-challenge-port
Refs: XRDDEV-2974